--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10&family=Kablammo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Jersey+10&family=Kablammo&display=swap');
+
+*{
+    box-sizing: border-box;
+}
+
+body{
+background-color: lightyellow;
+font-family: "DynaPuff", system-ui;
+}
+
+
