created header, home, login, profile,restaurant and menu pages

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,8 @@
-<p>cart works!</p>
+<!-- <p>cart works!</p> -->
+<nav aria-label="breadcrumb" style="font-family: 'Courier New', Courier, monospace;">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a routerLink="/home">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Cart</li>
+      <li class="breadcrumb-item"><a routerLink="/restaurants">Restaurants</a></li>
+    </ol>
+  </nav><br/><br/>
