--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,23 +15,34 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" routerLink="/home"
-                            style="color: green; font-size:20px;">Home</a>
+                        <a class="nav-link active" aria-current="page" routerLink="/home" style="color: green; font-size:20px;">Home</a>
                     </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <li class="nav-item">
-                        <a class="nav-link" routerLink="/restaurants" style="color: green; font-size:20px;">Restaurants</a>
+                        <a class="nav-link" routerLink="/restaurants"
+                        style="color: green; font-size:20px;" >Restaurants</a>
                     </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
                 </ul>
 
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+ <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+  <li class="nav-item" *ngIf="!isLoggedIn">
+  <a class="nav-link" routerLink="/login" 
+  style="color: green; font-size:20px;">Login</a>
+  </li>
+
+ <li class="nav-item" *ngIf="isLoggedIn">
+ <a class="nav-link" routerLink="/cart"
+ style="color: green; font-size:20px;">Cart</a>
+ </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
                     <li class="nav-item" *ngIf="isLoggedIn">
-                        <a class="nav-link" routerLink="/cart" style="color: green; font-size:20px;">Cart</a>
+                        <a class="nav-link" routerLink="/profile-edit"
+                         style="color: green; font-size:20px;">Profile</a>
                     </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-                    <li class="nav-item" *ngIf="!isLoggedIn">
-                        <a class="nav-link" routerLink="/login" style="color: green; font-size:20px;">Login</a>
-                    </li>
+                    <li class="nav-item" *ngIf="isLoggedIn">
+                        <a class="nav-link" (click)="logout()"
+                         style="color: green; font-size:20px;">Logout</a>
+                    </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
                 </ul>
             </div>
