--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -1,1 +1,49 @@
-<p>restaurants works!</p>
+ <!-- <p>restaurants works!</p> -->
+<br />
+<div class="container-fluid">
+    <nav aria-label="breadcrumb" style="font-family: 'Courier New', Courier, monospace;">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a routerLink="/home">Home</a></li>
+          <li class="breadcrumb-item"><a routerLink="/cart">Cart</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Restaurants</li>
+        </ol>
+      </nav><br/><br/>
+  
+
+    <div class="row">
+      @for (restaurant of restaurants; track restaurant) {
+        <div class="col-6">
+          <div class="container" >
+              <img src={{restaurant.imgUrl}} >
+              <div class="float">
+              <ul >
+              <li>{{restaurant.restaurantName}}</li>
+              <li>{{restaurant.area}}</li>
+              <li>{{restaurant.distance}}</li>
+            <a routerLink="{{restaurant.restaurantName}}">See more...</a>
+            </ul>
+              
+        </div>
+      </div>
+</div>
+      }
+        </div> 
+
+
+<!-- <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+        </a>
+      </li>
+    </ul>
+  </nav> -->
